added iframe support

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                 <a href="/basic-auth/" class="demo-btn">
                     Launch Basic Auth Demo →
                 </a>
+                <div style="margin-top:0.7rem;"><a href="/iframe-demo.html?url=basic-auth/" class="demo-btn" style="background:#1976D2;">Open in Iframe (Isolated)</a></div>
             </div>
 
             <!-- Form Auth Demo -->
@@ -243,6 +244,7 @@
                 <a href="/form-auth" class="demo-btn">
                     Launch Form Auth Demo →
                 </a>
+                <div style="margin-top:0.7rem;"><a href="/iframe-demo.html?url=form-auth-login.html" class="demo-btn" style="background:#1976D2;">Open in Iframe (Isolated)</a></div>
             </div>
 
             <!-- Simple Password Auth Demo -->
@@ -274,6 +276,7 @@
                 <a href="/simple-password-auth" class="demo-btn">
                     Launch Simple Password Auth →
                 </a>
+                <div style="margin-top:0.7rem;"><a href="/iframe-demo.html?url=simple-password-login.html" class="demo-btn" style="background:#1976D2;">Open in Iframe (Isolated)</a></div>
             </div>
 
             <!-- Blocking UI Demo -->
@@ -300,6 +303,7 @@
                 <a href="/blocking-ui" class="demo-btn">
                     Launch Blocking UI Demo →
                 </a>
+                <div style="margin-top:0.7rem;"><a href="/iframe-demo.html?url=blocking-ui-content.html" class="demo-btn" style="background:#1976D2;">Open in Iframe (Isolated)</a></div>
             </div>
 
             <!-- Multi-Page Auth Demo -->
@@ -331,6 +335,7 @@
                 <a href="/multi-page-auth" class="demo-btn">
                     Launch Multi-Page Auth →
                 </a>
+                <div style="margin-top:0.7rem;"><a href="/iframe-demo.html?url=multi-page-dashboard.html" class="demo-btn" style="background:#1976D2;">Open in Iframe (Isolated)</a></div>
             </div>
             <!-- End Simple Password Auth Demo -->
         </div>
