--- a/index.html
+++ b/index.html
@@ -367,6 +367,15 @@
             <!-- End Simple Password Auth Demo -->
         </div>
         <!-- End of .demos-grid -->
+                <footer style="text-align:center;color:#fff;opacity:0.9;margin-top:2rem;font-size:0.9rem;line-height:1.6;">
+                        <p>Sitemaps: 
+                            <a style="color:#fff;font-weight:600;text-decoration:underline;" href="/sitemap-index.xml">Index</a> • 
+                            <a style="color:#fff;text-decoration:underline;" href="/sitemaps/sitemap-pages.xml">Pages</a> • 
+                            <a style="color:#fff;text-decoration:underline;" href="/sitemaps/sitemap-auth-core.xml">Auth Core</a> • 
+                            <a style="color:#fff;text-decoration:underline;" href="/sitemaps/sitemap-auth-flows.xml">Auth Flows</a>
+                        </p>
+                        <p><a style="color:#fff;text-decoration:underline;" href="/robots.txt">robots.txt</a></p>
+                </footer>
     </div>
     <script>
         function copyCommand() {
