added auth in sitemaps

--- a/index.html
+++ b/index.html
@@ -365,6 +365,35 @@
                 <div style="margin-top:0.7rem;"><a href="/iframe-demo.html?url=slow" class="demo-btn" style="background:#1976D2;">Open in Iframe (Isolated)</a></div>
             </div>
             <!-- End Simple Password Auth Demo -->
+
+            <!-- Sitemap Testing Demo -->
+            <div class="demo-card" style="--accent-color: #6c5ce7;">
+                <span class="demo-icon">🗺️</span>
+                <h3>Sitemap Auth Testing</h3>
+                <p>Test different authentication scenarios for XML sitemaps. Includes 4 auth modes: both protected, root-only, children-only, and open access.</p>
+                
+                <div class="demo-credentials">
+                    <strong>Auth Scenarios:</strong><br>
+                    • Root auth, children open<br>
+                    • Root auth, children auth<br>
+                    • Root open, children open<br>
+                    • Root open, children auth
+                </div>
+
+                <div class="demo-features">
+                    <ul>
+                        <li>Four simultaneous auth scenarios</li>
+                        <li>Static and dynamic sitemap endpoints</li>
+                        <li>Basic HTTP authentication</li>
+                        <li>Complete testing documentation</li>
+                    </ul>
+                </div>
+
+                <a href="/public/sitemap-testing.html" class="demo-btn">
+                    Launch Sitemap Testing →
+                </a>
+            </div>
+            <!-- End Sitemap Testing Demo -->
         </div>
         <!-- End of .demos-grid -->
                 <footer style="text-align:center;color:#fff;opacity:0.9;margin-top:2rem;font-size:0.9rem;line-height:1.6;">
