added the auth in link sdirectly

--- a/public/sitemap-testing.html
+++ b/public/sitemap-testing.html
@@ -342,8 +342,8 @@
                     <h4>Root-Only Protection</h4>
                     <p>Index requires auth, children are open</p>
                     <div class="url">
-                        <span>https://web-demos-9iun.onrender.com/sitemap-scenarios/root-only/sitemap-index.xml</span>
-                        <button class="url-copy-btn" onclick="copyText('https://web-demos-9iun.onrender.com/sitemap-scenarios/root-only/sitemap-index.xml', this)">Copy</button>
+                        <span>https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/root-only/sitemap-index.xml</span>
+                        <button class="url-copy-btn" onclick="copyText('https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/root-only/sitemap-index.xml', this)">Copy</button>
                     </div>
                     <div class="url">
                         <span>https://web-demos-9iun.onrender.com/sitemap-scenarios/root-only/pages.xml</span>
@@ -355,12 +355,12 @@
                     <h4>Both Protected</h4>
                     <p>Both index and children require auth</p>
                     <div class="url">
-                        <span>https://web-demos-9iun.onrender.com/sitemap-scenarios/both/sitemap-index.xml</span>
-                        <button class="url-copy-btn" onclick="copyText('https://web-demos-9iun.onrender.com/sitemap-scenarios/both/sitemap-index.xml', this)">Copy</button>
+                        <span>https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/both/sitemap-index.xml</span>
+                        <button class="url-copy-btn" onclick="copyText('https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/both/sitemap-index.xml', this)">Copy</button>
                     </div>
                     <div class="url">
-                        <span>https://web-demos-9iun.onrender.com/sitemap-scenarios/both/pages.xml</span>
-                        <button class="url-copy-btn" onclick="copyText('https://web-demos-9iun.onrender.com/sitemap-scenarios/both/pages.xml', this)">Copy</button>
+                        <span>https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/both/pages.xml</span>
+                        <button class="url-copy-btn" onclick="copyText('https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/both/pages.xml', this)">Copy</button>
                     </div>
                     </div>
                 </div>
@@ -382,12 +382,12 @@
                     <h4>Children-Only Protection</h4>
                     <p>Index is open, children require auth</p>
                     <div class="url">
-                        <span>https://web-demos-9iun.onrender.com/sitemap-scenarios/children-only/sitemap-index.xml</span>
-                        <button class="url-copy-btn" onclick="copyText('https://web-demos-9iun.onrender.com/sitemap-scenarios/children-only/sitemap-index.xml', this)">Copy</button>
+                        <span>https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/children-only/sitemap-index.xml</span>
+                        <button class="url-copy-btn" onclick="copyText('https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/children-only/sitemap-index.xml', this)">Copy</button>
                     </div>
                     <div class="url">
-                        <span>https://web-demos-9iun.onrender.com/sitemap-scenarios/children-only/pages.xml</span>
-                        <button class="url-copy-btn" onclick="copyText('https://web-demos-9iun.onrender.com/sitemap-scenarios/children-only/pages.xml', this)">Copy</button>
+                        <span>https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/children-only/pages.xml</span>
+                        <button class="url-copy-btn" onclick="copyText('https://admin:admin@web-demos-9iun.onrender.com/sitemap-scenarios/children-only/pages.xml', this)">Copy</button>
                     </div>
                 </div>
             </div>
