added multiple form auth pages

--- a/public/form-auth-secure.html
+++ b/public/form-auth-secure.html
@@ -63,7 +63,13 @@
         <form method="POST" action="/form-auth/logout" style="display: inline;">
             <button type="submit" class="btn">Logout</button>
         </form>
-        
+
+        <div style="margin: 20px 0;">
+            <a href="/form-auth/secure-1" class="btn" style="background:#1976D2;">Go to Secure Page 1</a>
+            <a href="/form-auth/secure-2" class="btn" style="background:#1976D2;">Go to Secure Page 2</a>
+            <a href="/form-auth/secure-3" class="btn" style="background:#1976D2;">Go to Secure Page 3</a>
+        </div>
+
         <a href="/" class="btn back-btn">← Back to Landing</a>
     </div>
 
