pdfs behind auth

--- a/public/form-auth-secure.html
+++ b/public/form-auth-secure.html
@@ -48,6 +48,7 @@
         <div class="demo-info">
             <h3>Form Authentication Success!</h3>
             <p>You've successfully logged in using form-based authentication. Your session is active and you can access protected resources.</p>
+            <p><a href="/pdfs/behind_auth/form_auth.pdf" target="_blank" style="color:#1976D2;font-weight:bold;">Download your protected PDF</a></p>
         </div>
 
         <div class="demo-info">
