--- a/public/simple-password-secure.html
+++ b/public/simple-password-secure.html
@@ -40,6 +40,7 @@
             <p>This page is protected by a simple password-only authentication. No username required.</p>
             <div class="used-password" id="used-password"></div>
         </div>
+        <p><a href="/pdfs/behind_auth/simplepass_auth.pdf" target="_blank" style="color:#1976D2;font-weight:bold;">Download your protected PDF</a></p>
         <form method="POST" action="/simple-password-auth/logout">
             <button type="submit" class="btn">Logout</button>
         </form>
