--- a/public/multi-page-dashboard.html
+++ b/public/multi-page-dashboard.html
@@ -87,6 +87,7 @@
             <div class="success-icon">🎉</div>
             <h1>Registration Complete!</h1>
             <p>You've successfully completed the multi-page authentication process and are now logged into your dashboard.</p>
+            <p><a href="/pdfs/behind_auth/multipage_auth.pdf" target="_blank" style="color:#1976D2;font-weight:bold;">Download your protected PDF</a></p>
         </div>
 
         <div class="dashboard-grid">
