--- a/public/multi-page-dashboard.html
+++ b/public/multi-page-dashboard.html
@@ -178,6 +178,32 @@
             .catch(error => {
                 // Do nothing here, as redirect will already have happened
             });
+
+        // Simple client-side review form handler
+        (function () {
+            const form = document.getElementById('multi-page-review-form');
+            const status = document.getElementById('multi-page-review-status');
+            if (form && status) {
+                form.addEventListener('submit', function (e) {
+                    e.preventDefault();
+                    status.textContent = 'Form submitted';
+                });
+            }
+        })();
     </script>
+
+    <div class="container" style="margin-top:20px; max-width:800px;">
+        <div class="welcome-section" style="margin-top:20px;">
+            <h3>Leave a quick review</h3>
+            <form id="multi-page-review-form">
+                <div style="margin: 10px 0; text-align:left;">
+                    <label for="multi-page-comment">Comments:</label><br>
+                    <textarea id="multi-page-comment" name="comment" rows="3" style="width:100%; margin-top:6px; padding:8px; border-radius:4px; border:1px solid #ccc;"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit Review</button>
+                <span id="multi-page-review-status" style="margin-left:10px;"></span>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
