--- a/public/simple-password-secure.html
+++ b/public/simple-password-secure.html
@@ -57,6 +57,32 @@
                     document.getElementById('used-password').textContent = `Password used: ${data.password}`;
                 }
             });
+
+        // Simple client-side review form handler
+        (function () {
+            const form = document.getElementById('simple-password-review-form');
+            const status = document.getElementById('simple-password-review-status');
+            if (form && status) {
+                form.addEventListener('submit', function (e) {
+                    e.preventDefault();
+                    status.textContent = 'Form submitted';
+                });
+            }
+        })();
     </script>
+
+    <div class="container" style="margin-top:20px; max-width:400px;">
+        <div class="info">
+            <h3>Leave a quick review</h3>
+            <form id="simple-password-review-form">
+                <div style="margin: 10px 0; text-align:left; color:#333;">
+                    <label for="simple-password-comment">Comments:</label><br>
+                    <textarea id="simple-password-comment" name="comment" rows="3" style="width:100%; margin-top:6px; padding:8px; border-radius:4px; border:1px solid #ffc107;"></textarea>
+                </div>
+                <button type="submit" class="btn">Submit Review</button>
+                <span id="simple-password-review-status" style="margin-left:10px; color:#333;"></span>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
